@@ -15,6 +15,7 @@
  */
 package client.scenes;
 
+import client.utils.Config;
 import client.utils.ConfigUtils;
 import com.google.inject.Inject;
 
@@ -46,6 +47,7 @@ import java.util.Map;
 
 public class OverviewCtrl {
 
+    private Config config;
     private final ServerUtils server;
     private final MainCtrl mainCtrl;
     private static final double EXPENSE_EDIT_SIZE = 17;
@@ -79,9 +81,10 @@ public class OverviewCtrl {
     @FXML
     private Button settleDebts;
     @Inject
-    public OverviewCtrl(ServerUtils server, MainCtrl mainCtrl) {
+    public OverviewCtrl(ServerUtils server, MainCtrl mainCtrl, Config config) {
         this.mainCtrl = mainCtrl;
         this.server = server;
+        this.config = config;
     }
 
     public BorderPane expenseComponent(Expense expense) {
@@ -132,13 +135,24 @@ public class OverviewCtrl {
         participantsText.setText(String.join(",",
                 participants.stream().map(Participant::getNickname).toList()));
         choiceBox.getItems().addAll(participants.stream().map(Participant::getNickname).toList());
-        choiceBox.setValue(choiceBox.getItems().getFirst());
+        choiceBox.setValue(choiceBox.getItems().get(0));
 //        choiceBox.setValue(participants.get(0));
 //        System.out.println(event.getExpenses().toString());
         List<BorderPane> collection =
                 event.getExpenses().stream().map(this::expenseComponent).toList();
         list.getChildren().addAll(collection);
 //        switchToDutch();
+        switch (config.getLocale().getLanguage()) {
+            case "nl":
+                switchToDutch();
+                break;
+            case "en":
+                switchToEnglish();
+                break;
+            default:
+                switchToEnglish();
+                break;
+        }
     }
 
     public void choiceChanged() {
@@ -153,13 +167,20 @@ public class OverviewCtrl {
         // TODO pass the current event as parameter (to choose tags and participant from)
     }
 
+
+    public void openDebts() {
+        System.out.println("Open debts");
+        mainCtrl.showDebts();
+        // TODO pass the current event as parameter
+    }
+
     public void openInvitation() {
         System.out.println(("Invite people"));
         mainCtrl.showInvitation();
     }
 
     public void switchToDutch() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/overviewDutch.csv"));
+        Map<String, String> textMap = ConfigUtils.readFile(new File("client/src/main/resources/config/overviewDutch.csv"), "@");
         title.setText(textMap.get("title"));
         sendInvites.setText(textMap.get("sendInvites"));
         expensesLabel.setText(textMap.get("expensesLabel"));
@@ -171,7 +192,7 @@ public class OverviewCtrl {
     }
 
     public void switchToEnglish() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/overviewEnglish.csv"));
+        Map<String, String> textMap = ConfigUtils.readFile(new File("client/src/main/resources/config/overviewEnglish.csv"), "@");
         title.setText(textMap.get("title"));
         sendInvites.setText(textMap.get("sendInvites"));
         expensesLabel.setText(textMap.get("expensesLabel"));
